# qtx

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  build.rs
src/: application.cpp  ffi.cpp  lib.cpp  lib.rs
src/ffi/: heap_ptr.rs  mod.rs
